J'ai fait le tableau avec tous les PIB

--- a/Stat_desc.ipynb
+++ b/Stat_desc.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Évolution des Heures travaillées en France"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -34,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Évolution des Heures travaillées en France"
+    "Évolution du PIB en France\n"
    ]
   },
   {
@@ -71,7 +78,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Évolution du PIB en France\n"
+    "Évolution des principaux PIB en europe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_countries = ['PIB_Germany', 'PIB_France', 'PIB_United_Kingdom','PIB_Spain', 'PIB_Italy', 'PIB_Netherlands', 'PIB_Türkiye', 'PIB_Switzerland']\n",
+    "\n",
+    "df_selected = df_GDP_pivot[selected_countries]\n",
+    "\n",
+    "colors = plt.cm.get_cmap(\"tab10\", len(df_selected.columns))  # Utilisation d'une palette de couleurs\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "for i, country in enumerate(df_selected.columns):\n",
+    "    plt.plot(df_selected.index, df_selected[country], label=country, color=colors(i))\n",
+    "\n",
+    "# Personnalisation du graphique\n",
+    "plt.xlabel(\"Période\")\n",
+    "plt.ylabel(\"PIB en Millions\")\n",
+    "plt.title(\"Principaux PIB trimestriels en Europe \")\n",
+    "plt.xticks(df_selected.index[::17], rotation=45)\n",
+    "plt.legend(loc=\"upper left\", bbox_to_anchor=(1, 1), ncol=2)  # Légende en dehors du graphique\n",
+    "plt.grid(True)\n",
+    "plt.gca().yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.0f}\"))\n",
+    "\n",
+    "# Affichage du graphique\n",
+    "plt.show()\n"
    ]
   }
  ],
