Les taux sont dans data

--- a/data.ipynb
+++ b/data.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,29 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.ticker as ticker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous créons la liste qui contient les pays cités précédemment, à noter que la Slovaquie apparaît sous le nom Slovakia pour Eurostat et Slovak Republic pour l'OCDE, elle est donc sous deux noms dans notre liste de pays à sélectionner. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Liste comportant les pays choisis\n",
+    "countries_selected=[\n",
+    "    \"Austria\", \"Belgium\", \"Bulgaria\", \"Czechia\", \"Denmark\", \"Estonia\", \n",
+    "    \"Finland\", \"France\", \"Germany\", \"Greece\", \"Hungary\", \"Iceland\", \n",
+    "    \"Ireland\", \"Italy\", \"Latvia\", \"Lithuania\", \"Luxembourg\", \"Netherlands\", \n",
+    "    \"Norway\", \"Poland\", \"Portugal\", \"Romania\", \"Slovakia\", \"Slovak Republic\",\n",
+    "    \"Slovenia\", \"Spain\", \"Sweden\", \"Switzerland\", \"United Kingdom\"\n",
+    "]"
    ]
   },
   {
@@ -98,15 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Charge les données depuis le csv \n",
     "df_GDP = pd.read_csv(\"Données_extraites/GDP_trimestriel_eurostat.csv\", encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires\n",
-    "df_GDP_selected = df_GDP[['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "df_GDP_selected = df_GDP[df_GDP['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
     "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
     "df_GDP_pivot = df_GDP_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
@@ -136,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Charge les données de 1995 à 1997 \n",
     "df_working_hours_95_97 = pd.read_csv(\"Données_extraites/Working_hours_eurostat_1995-1997.csv\", encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires\n",
-    "df_working_hours_95_97_selected = df_working_hours_95_97[['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "df_working_hours_95_97_selected = df_working_hours_95_97[df_working_hours_95_97['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
     "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
     "df_working_hours_95_97_pivot = df_working_hours_95_97_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
@@ -155,13 +178,13 @@
     "\n",
     "# Même processus pour celles de 1998 à 2007 et celles de 2008 à 2024\n",
     "df_working_hours_98_07 = pd.read_csv(\"Données_extraites/Working_hours_eurostat_1998-2007.csv\", encoding='utf-8')\n",
-    "df_working_hours_98_07_selected = df_working_hours_98_07[['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "df_working_hours_98_07_selected = df_working_hours_98_07[df_working_hours_98_07['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "df_working_hours_98_07_pivot = df_working_hours_98_07_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
     "df_working_hours_98_07_pivot.columns = [f'WH_{col}' for col in df_working_hours_98_07_pivot.columns]\n",
     "df_working_hours_98_07_pivot.columns = [col.replace(\" \", \"_\") for col in df_working_hours_98_07_pivot.columns]\n",
     "\n",
     "df_working_hours_08_24 = pd.read_csv(\"Données_extraites/Working_hours_eurostat_2008-2024.csv\", encoding='utf-8')\n",
-    "df_working_hours_08_24_selected = df_working_hours_08_24[['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "df_working_hours_08_24_selected = df_working_hours_08_24[df_working_hours_08_24['geo'].isin(countries_selected)][['geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "df_working_hours_08_24_pivot = df_working_hours_08_24_selected.pivot_table(index='TIME_PERIOD', columns='geo', values='OBS_VALUE')\n",
     "df_working_hours_08_24_pivot.columns = [f'WH_{col}' for col in df_working_hours_08_24_pivot.columns]\n",
     "df_working_hours_08_24_pivot.columns = [col.replace(\" \", \"_\") for col in df_working_hours_08_24_pivot.columns]\n",
@@ -177,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,35 +264,34 @@
    "source": [
     "Pour les taux d'intérêts nous récupérons des taux de long-terme, à savoir des obligations d'Etat à 10 ans, et des taux de court-terme. Les taux à court terme sont généralement soit le taux interbancaire à trois mois lié aux prêts accordés et acceptés par les banques pour tout excès ou manque de liquidité sur plusieurs mois, soit le taux associé aux bons du Trésor, aux certificats de dépôt ou à des instruments comparables, chacun d'une durée de trois mois. Pour les pays de la zone euro, le « European Interbank Offered Rate » à trois mois est utilisé à partir de la date à laquelle le pays a rejoint l'euro.  \n",
     "\n",
-    "Nous commençons par récupérer les taux de long-terme"
+    "Nous commençons par récupérer les taux de long-terme puis ceux de court-terme"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Charger les données\n",
     "df_LT_IR = pd.read_csv('Données_extraites/Long_term_IR_OCDE.csv', encoding='utf-8')\n",
     "\n",
-    "# Sélectionne les colonnes nécessaires\n",
-    "df_LT_IR_selected = df_LT_IR[['Reference area', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "# Sélectionne les colonnes nécessaires avec les pays sélectionnés\n",
+    "df_LT_IR_selected = df_LT_IR[df_LT_IR['Reference area'].isin(countries_selected)][['Reference area', 'TIME_PERIOD', 'OBS_VALUE']]\n",
     "\n",
     "# Change le format avec les périodes en index et les noms des pays en noms de colonnes\n",
-    "df_LT_IR_pivot = df_LT_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE', aggfunc='first')\n",
+    "df_LT_IR_pivot = df_LT_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
     "\n",
     "# Renommer les colonnes pour inclure le préfixe LT_IR_ (=Long Term Interest Rate)\n",
     "df_LT_IR_pivot.columns = [f'LT_IR_{col}' for col in df_LT_IR_pivot.columns]\n",
     "df_LT_IR_pivot.columns = [col.replace(\" \", \"_\") for col in df_LT_IR_pivot.columns]\n",
     "\n",
-    "# On filtre les pays qui nous intéressent\n",
-    "colonnes_a_garder = [f'LT_IR_{pays}' for pays in countries_selected]\n",
-    "\n",
-    "# Vérification et filtrage\n",
-    "df_LT_IR=df_LT_IR_pivot\n",
-    "df_LT_IR = df_LT_IR[[col for col in df_LT_IR.columns if col in colonnes_a_garder]]\n",
-    "df_LT_IR"
+    "# Même processus pour les taux de long-terme\n",
+    "df_ST_IR=pd.read_csv('Données_extraites/Short_term_IR_OCDE.csv', encoding='utf-8')\n",
+    "df_ST_IR_selected = df_ST_IR[df_ST_IR['Reference area'].isin(countries_selected)][['Reference area', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "df_ST_IR_pivot = df_ST_IR_selected.pivot_table(index='TIME_PERIOD', columns='Reference area', values='OBS_VALUE')\n",
+    "df_ST_IR_pivot.columns = [f'ST_IR_{col}' for col in df_ST_IR_pivot.columns]\n",
+    "df_ST_IR_pivot.columns = [col.replace(\" \", \"_\") for col in df_ST_IR_pivot.columns]"
    ]
   }
  ],
