ajout du df avec les valeurs manquantes

--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -119,6 +119,26 @@
     "plt.gca().yaxis.set_major_formatter(ticker.StrMethodFormatter(\"{x:,.0f}\")) #permet de ne pas avoir d'écriture scientifique\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Liste des périodes sans valeurs par pays sur le df des heures travaillées"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wh_nan = df_working_hours.isna()\n",
+    "df_wh_nan = pd.DataFrame({\n",
+    "    \"TIME_PERIOD_WITH_NAN\": df_wh_nan.apply(lambda col: list(df_working_hours.index[col]), axis = 0)\n",
+    "})\n",
+    "df_wh_nan.to_csv(\"df_wh_nan.csv\", index=True, encoding=\"utf-8\")"
+   ]
   }
  ],
  "metadata": {
